Add a benchmark test for rblas dot

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 authors = ["Min Kim <msk@dolbo.net>"]
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.2"
+rand = "0.5"
+rblas = "0.0"
+
+[[bench]]
+name = "vector"
+harness = false
