--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Min Kim <msk@dolbo.net>"]
 
 [dev-dependencies]
 criterion = "0.2"
+lineal = { git = "https://github.com/msk/lineal", rev = "75fe02c5" }
 nalgebra = "0.16"
 ndarray = "0.12"
 rand = "0.5"
